1. Localize Trace Message. 2. Add Waving Flag Setting.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@97 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/OptionsDialog.xaml
+++ b/ClearMine.Dialogs/OptionsDialog.xaml
@@ -103,11 +103,12 @@
             <WrapPanel>
                 <CheckBox Content="{DynamicResource PlaySoundLabel}"
                           Margin="0,0,12,0"
-                          IsChecked="{Binding PlaySound}"
-                          DockPanel.Dock="Top" />
+                          IsChecked="{Binding PlaySound}" />
                 <CheckBox Content="{DynamicResource PlayAnimationLabel}"
-                          DockPanel.Dock="Top"
+                          Margin="0,0,12,0"
                           IsChecked="{Binding PlayAnimation}" />
+                <CheckBox Content="{DynamicResource WavingFlagEffect}"
+                          IsChecked="{Binding WavingFlag}" />
             </WrapPanel>
         </GroupBox>
         <GroupBox Header="{DynamicResource GameControlGroupLabel}"
