Shows double mouse press visual effect.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@99 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Themes/Themes/luna.normalcolor.xaml
+++ b/ClearMine.Themes/Themes/luna.normalcolor.xaml
@@ -463,11 +463,11 @@
 
     <Style TargetType="{x:Type c:MineCellControl}">
         <Style.Triggers>
-            <Trigger Property="IsPressed"
+            <DataTrigger Binding="{Binding IsPressed}"
                      Value="True">
                 <Setter Property="Background"
                         Value="{DynamicResource PressedCellBackground}" />
-            </Trigger>
+            </DataTrigger>
             <DataTrigger Binding="{Binding IsTerminator}"
                          Value="True">
                 <Setter Property="Background"
