Add Paused GameState to show some visual effect when game paused.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@100 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Localization/en-US/Overall.xaml
+++ b/ClearMine.Localization/en-US/Overall.xaml
@@ -134,6 +134,7 @@
     <s:String x:Key="TraceReplaceBehaviorTarget">Replacing attatched target of {0}</s:String>
     <s:String x:Key="DetatchingUnattachedBehavior">The behavior has not been attatched yet.</s:String>
     <s:String x:Key="NewWavingAnimationCreated">A new waving animation created.</s:String>
+    <s:String x:Key="NewMonoEffectCreated">A new mono effect has been created.</s:String>
     <s:String x:Key="NewWavingEffectCreated">A wave effect has been created.</s:String>
     <s:String x:Key="NewNumberPresenterCreated">A new NumberPresenter created.</s:String>
     <s:String x:Key="TraceMinesPanelArranged">MinesPanel Arranged. {0}</s:String>
