--- a/ClearMine.Framework/Dialogs/ExceptionBox.xaml
+++ b/ClearMine.Framework/Dialogs/ExceptionBox.xaml
@@ -2,7 +2,7 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="clr-namespace:ClearMine.Framework.Dialogs"
-                x:Name="root"
+                x:Name="root" MaxWidth="640"
                 WindowStartupLocation="CenterOwner"
                 ExpanderMessage="{DynamicResource ExceptionBoxExpanderLabel}"
                 Title="{DynamicResource ExceptionBoxTitle}">
