1. Refine ExceptionBox and App.xaml.cs file. 2. Fix ClearMine project Debug build output file path bug.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@102 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -79,10 +79,13 @@
                         <DockPanel DockPanel.Dock="Top">
                             <Image Source="{TemplateBinding ImageSource}"
                                    Margin="12" />
-                            <TextBlock Text="{TemplateBinding Message}"
-                                       FontSize="14pt"
-                                       Margin="0,12,12,12"
-                                       Foreground="#FF003399" />
+                            <TextBox Text="{TemplateBinding Message}"
+                                     TextWrapping="Wrap"
+                                     IsReadOnly="True"
+                                     BorderThickness="0"
+                                     FontSize="14pt"
+                                     Margin="0,12,12,12"
+                                     Foreground="#FF003399" />
                         </DockPanel>
                         <DockPanel LastChildFill="False"
                                    Background="#FFF0F0F0"
