--- a/ClearMine.Framework/Dialogs/ExceptionBox.xaml
+++ b/ClearMine.Framework/Dialogs/ExceptionBox.xaml
@@ -2,7 +2,7 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:d="clr-namespace:ClearMine.Framework.Dialogs"
-                x:Name="root" MaxWidth="640"
+                x:Name="root" MaxWidth="640" MaxHeight="480"
                 WindowStartupLocation="CenterOwner"
                 ExpanderMessage="{DynamicResource ExceptionBoxExpanderLabel}"
                 Title="{DynamicResource ExceptionBoxTitle}">
@@ -23,7 +23,8 @@
     </d:OptionDialog.Options>
     <DockPanel>
         <TextBlock DockPanel.Dock="Bottom"
-                   Margin="0,12,0,12" TextAlignment="Right"
+                   Margin="0,12,12,12"
+                   TextAlignment="Right"
                    Visibility="{Binding HasInnerException, ElementName=root, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Hyperlink Click="OnShowInnerException">Show inner exception</Hyperlink>
         </TextBlock>
